detoks: Add graph dependency to `build.gradle`
Extend the `build.gradle` file with the `MPAndroidChart` dependency
that will allow us to create interractive graphs for the benchmarks of
the `TransactionEngine`. We will introduce these benchmarks in a
follow-up commit.

Link to the GitHub repository of `MPAndroidChart`:
- https://github.com/PhilJay/MPAndroidChart

--- a/detoks/build.gradle
+++ b/detoks/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     }
 
     // AndroidX
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
