--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,7 +126,7 @@ dependencies {
     implementation project(':atomic-swap')
     implementation project(':literaturedao')
     implementation project(':detoks')
-    implementation project(':offlinemoney')
+    implementation project(':offlinedigitaleuro')
     api(project(':common')) {
         exclude group: 'net.java.dev.jna'
     }
