--- a/settings.gradle
+++ b/settings.gradle
@@ -36,4 +36,4 @@ include ':atomic-swap'
 include ':literaturedao'
 include ':geth-android'
 include ':detoks'
-include ':offlinemoney'
+include ':offlinedigitaleuro'
