Added unit tests for community directory

--- a/detoks-uvt/build.gradle
+++ b/detoks-uvt/build.gradle
@@ -79,7 +79,9 @@ dependencies {
     implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
 
     // Testing
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.11.2'
+    testImplementation "io.mockk:mockk:1.10.4"
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
