--- a/detoks/build.gradle
+++ b/detoks/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+//    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0")
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     // Logging
