--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'org.jlleitschuh.gradle.ktlint'
 apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'kotlin-kapt'
 apply plugin: "dagger.hilt.android.plugin"
+apply plugin: 'kotlinx-serialization'
 
 buildscript {
     repositories {
