--- a/detoks-engine/build.gradle
+++ b/detoks-engine/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation "io.mockk:mockk:1.9.3"
 
     // TODO fix direct import, this should rely on common.
     // BitTorrent
