--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -163,6 +163,17 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.MusicDaoTheme"></activity>
 
+
+        <activity
+            android:name="nl.tudelft.trustchain.peerai.PeerAIActivity"
+            android:exported="true"
+            android:label="PeerAI App"
+            android:parentActivityName=".ui.dashboard.DashboardActivity"
+            android:screenOrientation="portrait"
+
+
+            ></activity>
+
         <activity
             android:name="nl.tudelft.trustchain.literaturedao.LiteratureDaoActivity"
             android:exported="true"
