--- a/common-ethereum/build.gradle
+++ b/common-ethereum/build.gradle
@@ -4,17 +4,10 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
-
-    sourceSets {
-        main {
-            jniLibs.srcDirs = ['../common/libs']
-        }
-    }
-
     defaultConfig {
         minSdkVersion 24
-        targetSdkVersion 33
+        compileSdk 34
+        targetSdkVersion 34
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -34,14 +27,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
+
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_17.toString()
         allWarningsAsErrors = true
     }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['../common/libs']
+        }
+    }
+
     namespace 'nl.tudelft.trustchain.common.ethereum'
 }
 
