--- a/freedomOfComputing/build.gradle
+++ b/freedomOfComputing/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.jlleitschuh.gradle.ktlint'
 
 ktlint {
@@ -11,11 +10,10 @@ ktlint {
 }
 
 android {
-    compileSdkVersion 33
-
     defaultConfig {
         minSdkVersion 24
-        targetSdkVersion 33
+        compileSdk 34
+        targetSdkVersion 34
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -35,12 +33,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = JavaVersion.VERSION_17.toString()
         allWarningsAsErrors = true
     }
 
@@ -68,7 +66,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
     testImplementation 'junit:junit:4.12'
-    testImplementation "io.mockk:mockk:1.10.4"
+    testImplementation "io.mockk:mockk:$mockk_version"
     testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
