--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.jlleitschuh.gradle.ktlint'
 apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'kotlin-kapt'
@@ -22,19 +21,13 @@ configurations.all {
 }
 
 android {
-    compileSdkVersion 33
-
     useLibrary 'android.test.base'
     useLibrary 'android.test.mock'
 
-    buildFeatures {
-        viewBinding = true
-        compose true
-    }
-
     defaultConfig {
         minSdkVersion 24
-        targetSdkVersion 33
+        compileSdk 34
+        targetSdkVersion 34
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -47,15 +40,20 @@ android {
         }
     }
 
+    buildFeatures {
+        viewBinding = true
+        compose true
+    }
+
 // To inline the bytecode built with JVM target 1.8 into
 // bytecode that is being built with JVM target 1.6. (e.g. navArgs)
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = JavaVersion.VERSION_17.toString()
     }
 
     testOptions {
@@ -70,7 +68,7 @@ android {
 
     composeOptions {
         kotlinCompilerVersion kotlin_version
-        kotlinCompilerExtensionVersion "1.3.1"
+        kotlinCompilerExtensionVersion "1.5.9"
     }
 
     namespace 'nl.tudelft.trustchain.musicdao'
@@ -126,12 +124,12 @@ dependencies {
 
     // Testing
     testImplementation 'junit:junit:4.12'
-    testImplementation "io.mockk:mockk:1.9.3"
+    testImplementation "io.mockk:mockk:$mockk_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
     testImplementation "org.robolectric:robolectric:3.4.2"
 
     // Testing and generating example data
-    implementation "com.squareup.sqldelight:sqlite-driver:$sqldelight_version"
+    implementation "app.cash.sqldelight:sqlite-driver:$sqldelight_version"
 
     // Reading MP3 metadata
     implementation 'com.mpatric:mp3agic:0.9.1'
@@ -181,7 +179,7 @@ repositories {
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
-    kotlinOptions.freeCompilerArgs += ["-opt-in=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes",]
+    kotlinOptions.freeCompilerArgs += ["-opt-in=kotlin.ExperimentalUnsignedTypes",]
 }
 
 
