Add viewbinding to `peerai`

--- a/peerai/build.gradle
+++ b/peerai/build.gradle
@@ -23,13 +23,19 @@ android {
         }
     }
 
+    buildFeatures {
+        viewBinding = true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_17.toString()
     }
+
     namespace 'nl.tudelft.trustchain.peerai'
 }
 
