--- a/eurotoken/build.gradle
+++ b/eurotoken/build.gradle
@@ -1,7 +1,15 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'app.cash.sqldelight'
+apply plugin: 'org.jlleitschuh.gradle.ktlint'
 
+ktlint {
+    version = "$ktlint_version"
+    android = true
+    outputToConsole = true
+    ignoreFailures = false
+    verbose = true
+}
 
 sqldelight {
     databases {
