--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   test:
     name: Run Tests
-    runs-on: windows-latest
+    runs-on: windows-latest # TODO: Ubuntu currently broken.
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -21,7 +21,10 @@ jobs:
           java-version: 17
 
       - name: Run tests
-        run: bash ./gradlew check
+        run: bash ./gradlew test
+
+      - name: Run lint
+        run: bash ./gradlew ktlintCheck
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
