Add debug workflow

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -84,6 +84,8 @@ dependencies {
     }
 
     api 'com.google.guava:guava:30.0-android'
+    api "app.cash.sqldelight:android-driver:$sqldelight_version"
+    api "app.cash.sqldelight:coroutines-extensions:$sqldelight_version"
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.1.0'
