--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -1,4 +1,4 @@
-name: check
+name: debug
 
 on:
   pull_request:
@@ -23,7 +23,7 @@ jobs:
           java-version: '17'
 
       - name: Run check
-        run: bash ./gradlew check
+        run: bash ./gradlew verifyDebugDatabaseMigration
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
