--- a/eurotoken/build.gradle
+++ b/eurotoken/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 
     implementation project(':common')
 
+    api "app.cash.sqldelight:android-driver:$sqldelight_version"
+    api "app.cash.sqldelight:coroutines-extensions:$sqldelight_version"
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -86,12 +89,13 @@ dependencies {
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
 
+    // Testing
     testImplementation 'junit:junit:4.12'
-
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    testImplementation "app.cash.sqldelight:sqlite-driver:$sqldelight_version"
+
 
 
 }
