--- a/common/build.gradle
+++ b/common/build.gradle
@@ -17,6 +17,7 @@ sqldelight {
             packageName = "nl.tudelft.common.sqldelight"
             srcDirs = files(['src/main/sqldelight'])
             schemaOutputDirectory = file("src/main/sqldelight/databases")
+            verifyMigrations = false
         }
     }
 }
