Update `check` workflow + README

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,4 +1,4 @@
-name: check
+name: Execute checks
 
 on:
   pull_request:
@@ -8,7 +8,6 @@ on:
 jobs:
   test:
     name: Run Checks
-    # TODO: Ubuntu currently broken.
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -21,6 +20,13 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '17'
+
+      # TODO: Without this step, the build fails with the following error:
+      # Execution failed for task ':common:verifyDebugDatabaseMigration'.
+      # > A failure occurred while executing app.cash.sqldelight.gradle.VerifyMigrationTask$VerifyMigrationAction
+      #   > No suitable driver found for jdbc:sqlite:
+      - name: Run verifyDebugDatabase
+        run: bash ./gradlew verifyDebugDatabaseMigration
 
       - name: Run check
         run: bash ./gradlew check
