--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -21,7 +21,7 @@ jobs:
           distribution: 'zulu'
           java-version: '17'
 
-      # TODO: Without this step, the build fails with the following error:
+      # TODO: Without this step, the Gradle check task fails with the following error:
       # Execution failed for task ':common:verifyDebugDatabaseMigration'.
       # > A failure occurred while executing app.cash.sqldelight.gradle.VerifyMigrationTask$VerifyMigrationAction
       #   > No suitable driver found for jdbc:sqlite:
