Remove unused dependencies + import transitive dependencies

--- a/common-bitcoin/build.gradle
+++ b/common-bitcoin/build.gradle
@@ -41,16 +41,8 @@ android {
 }
 
 dependencies {
-
-    api project(':common')
-
     api group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.10'
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
-
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // Transitive dependency.
+    implementation 'com.google.guava:guava:30.0-android'
 }
