--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,8 +129,6 @@ dependencies {
         exclude group: 'net.java.dev.jna'
     }
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-runtime:1.0-M1-1.4.0-rc'
-
     // AndroidX
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation 'androidx.appcompat:appcompat:1.5.1'
@@ -138,14 +136,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
-    implementation "androidx.preference:preference-ktx:1.2.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    implementation "androidx.work:work-runtime-ktx:2.7.1"
 
     // Firebase
     implementation 'com.google.firebase:firebase-analytics:21.2.0'
@@ -161,9 +152,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     // Logging
-    implementation 'io.github.microutils:kotlin-logging:1.7.7'
     implementation('net.java.dev.jna:jna:5.12.1@aar')
-    implementation('com.github.tony19:logback-android:2.0.0')
 
     implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
     implementation project(':currencyii')
@@ -171,19 +160,40 @@ dependencies {
     // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Hilt
     implementation("com.google.dagger:hilt-android:$hilt_ver")
-    implementation("androidx.hilt:hilt-navigation-fragment:1.0.0")
-    implementation("androidx.hilt:hilt-navigation-compose:1.1.0-alpha01")
     kapt("com.google.dagger:hilt-android-compiler:$hilt_ver")
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
-    implementation("androidx.room:room-ktx:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt("androidx.room:room-compiler:$room_version")
+
+    // Transitive dependencies
+    androidTestImplementation 'androidx.test:monitor:1.6.1'
+    implementation 'androidx.annotation:annotation:1.5.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+    implementation 'androidx.core:core:1.9.0'
+    implementation 'androidx.datastore:datastore-core:1.0.0'
+    implementation 'androidx.datastore:datastore-preferences-core:1.0.0'
+    implementation 'androidx.fragment:fragment:1.5.4'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.6.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.6.0-alpha05'
+    implementation 'androidx.preference:preference:1.2.0'
+    implementation 'androidx.sqlite:sqlite:2.4.0'
+    implementation 'app.cash.sqldelight:android-driver:2.0.1'
+    implementation 'app.cash.sqldelight:runtime:2.0.1'
+    implementation 'com.google.dagger:dagger:2.50'
+    implementation 'com.google.dagger:hilt-core:2.50'
+    implementation 'com.google.errorprone:error_prone_annotations:2.9.0'
+    implementation 'com.google.guava:guava:31.0.1-android'
+    implementation 'javax.inject:javax.inject:1'
+    implementation(project(':ipv8')) {
+        exclude module: 'lazysodium-java'
+    }
+    implementation project(':ipv8-android')
+    kapt 'com.google.dagger:dagger-compiler:2.50'
 }
 
 
