--- a/common/build.gradle
+++ b/common/build.gradle
@@ -89,15 +89,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation "androidx.fragment:fragment-ktx:${fragment_version}"
-    implementation "androidx.preference:preference:1.1.0"
-    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation 'androidx.databinding:viewbinding:8.2.2'
 
     // QR
@@ -112,13 +105,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
-    // Logging
-    implementation 'io.github.microutils:kotlin-logging:1.7.7'
-
-    implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
-
     implementation group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.10'
-
     api project(':geth-android')
 
     // BitTorrent
@@ -138,6 +125,24 @@ dependencies {
     testImplementation "app.cash.sqldelight:sqlite-driver:$sqldelight_version"
     testImplementation "com.goterl:lazysodium-java:5.1.4"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // Transitive dependencies
+    api 'androidx.fragment:fragment:1.5.4'
+    api 'androidx.navigation:navigation-ui:2.5.3'
+    api 'androidx.viewpager2:viewpager2:1.0.0'
+    api(project(':ipv8')) {
+        exclude module: 'lazysodium-java'
+    }
+    implementation 'androidx.core:core:1.9.0'
+    implementation 'androidx.customview:customview:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-common:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-core:2.5.1'
+    implementation 'androidx.navigation:navigation-runtime:2.5.3'
+    implementation 'androidx.sqlite:sqlite:2.4.0'
+    implementation 'app.cash.sqldelight:android-driver:2.0.1'
+    implementation 'app.cash.sqldelight:coroutines-extensions:2.0.1'
+    implementation 'com.google.zxing:core:3.4.1'
+    testImplementation 'io.mockk:mockk-dsl:1.13.9'
 }
 
 
