--- a/freedomOfComputing/build.gradle
+++ b/freedomOfComputing/build.gradle
@@ -56,7 +56,6 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
@@ -65,16 +64,26 @@ dependencies {
     testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation project(':common')
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    // Transitive dependencies
+    androidTestImplementation 'androidx.test:monitor:1.6.1'
+    androidTestImplementation 'junit:junit:4.13.2'
+    api 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+    api(project(':ipv8')) {
+        exclude module: 'lazysodium-java'
+    }
+    implementation 'androidx.core:core:1.9.0'
+    implementation 'androidx.fragment:fragment:1.5.4'
+    implementation 'androidx.transition:transition:1.4.1'
+    implementation project(':ipv8-android')
+    testImplementation 'io.mockk:mockk-dsl:1.13.9'
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
