--- a/valuetransfer/build.gradle
+++ b/valuetransfer/build.gradle
@@ -72,10 +72,6 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
-    implementation "androidx.preference:preference:1.1.0"
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -83,7 +79,6 @@ dependencies {
 
     // Material
     implementation 'com.google.android.material:material:1.2.0'
-    implementation 'com.getbase:floatingactionbutton:1.10.1'
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -93,12 +88,9 @@ dependencies {
 
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
-    implementation 'com.github.tony19:logback-android:2.0.0'
 
     implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.room:room-runtime:$room_version"
     implementation project(path: ':eurotoken')
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
@@ -108,7 +100,6 @@ dependencies {
     // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
     // Blocking dialog and top snacbkbar
@@ -123,7 +114,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.0.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     implementation 'com.github.mhshams:jnbis:1.1.0'
-    implementation 'net.sf.scuba:scuba-sc-android:0.0.20'
     implementation 'com.madgag.spongycastle:prov:1.58.0.0'
 
     // Zoom image
@@ -133,6 +123,34 @@ dependencies {
     implementation "com.ncorti:slidetoact:0.9.0"
 
     implementation "com.android.volley:volley:1.2.1"
+
+    // Transitive dependencies
+    androidTestImplementation 'androidx.test:monitor:1.6.1'
+    api 'androidx.cardview:cardview:1.0.0'
+    api 'androidx.core:core:1.9.0'
+    api 'androidx.fragment:fragment:1.5.4'
+    api 'androidx.lifecycle:lifecycle-livedata-core:2.5.1'
+    api 'androidx.viewpager:viewpager:1.0.0'
+    api 'com.google.mlkit:common:16.0.0'
+    api(project(':ipv8')) {
+        exclude module: 'lazysodium-java'
+    }
+    implementation 'androidx.documentfile:documentfile:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-common:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-process:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
+    implementation 'androidx.sqlite:sqlite:2.4.0'
+    implementation 'app.cash.sqldelight:android-driver:2.0.1'
+    implementation 'app.cash.sqldelight:coroutines-extensions:2.0.1'
+    implementation 'com.google.mlkit:vision-common:16.0.0'
+    implementation 'net.sf.scuba:scuba-smartcards:0.0.18'
+    implementation(project(':ipv8-android')) {
+        exclude group: 'net.java.dev.jna'
+        exclude group: 'org.bouncycastle'
+    }
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
