--- a/debug/build.gradle
+++ b/debug/build.gradle
@@ -43,7 +43,7 @@ android {
 }
 
 dependencies {
-    implementation project(':common')
+    api project(':common')
 
     // AndroidX
     implementation 'androidx.core:core-ktx:1.9.0'
