--- a/peerai/build.gradle
+++ b/peerai/build.gradle
@@ -40,16 +40,14 @@ android {
 }
 
 dependencies {
-    implementation project(':common')
     api project(':common')
 
+    api 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.squareup.picasso:picasso:2.8'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-
-    implementation 'com.squareup.picasso:picasso:2.8'
 
     // Transitive dependencies
     androidTestImplementation 'androidx.test:monitor:1.6.1'
