--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,18 +116,9 @@ dependencies {
     implementation project(':eurotoken')
     implementation project(':valuetransfer')
     implementation project(':peerai')
-    api(project(':common')) {
-        exclude group: 'net.java.dev.jna'
-    }
-    api(project(':common-ethereum')) {
-        exclude group: 'net.java.dev.jna'
-    }
-    api(project(':currencyii')) {
-        exclude group: 'net.java.dev.jna'
-    }
-    api(project(':musicdao')) {
-        exclude group: 'net.java.dev.jna'
-    }
+    implementation project(':common')
+    implementation project(':currencyii')
+    implementation project(':musicdao')
 
     // AndroidX
     implementation "androidx.datastore:datastore-preferences:1.0.0"
@@ -167,8 +158,6 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-    kapt("androidx.room:room-compiler:$room_version")
 
     // Transitive dependencies
     androidTestImplementation 'androidx.test:monitor:1.6.1'
