--- a/common/build.gradle
+++ b/common/build.gradle
@@ -78,26 +78,23 @@ repositories {
 }
 
 dependencies {
-    api(project(':ipv8-android')) {
-        exclude group: 'net.java.dev.jna'
-        exclude group: 'org.bouncycastle'
-    }
+    implementation project(':ipv8-android')
 
-    api 'com.google.guava:guava:30.0-android'
+    implementation 'com.google.guava:guava:30.0-android'
 
     // AndroidX
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    api 'androidx.appcompat:appcompat:1.1.0'
+    api 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation 'androidx.databinding:viewbinding:8.2.2'
 
     // QR
-    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    api 'com.journeyapps:zxing-android-embedded:4.3.0'
 
     // Material
-    implementation 'com.google.android.material:material:1.1.0'
+    api 'com.google.android.material:material:1.1.0'
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -105,7 +102,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
-    implementation group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.10'
+    api group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.10'
     api project(':geth-android')
 
     // BitTorrent
@@ -117,14 +114,10 @@ dependencies {
 
     // Testing
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
     testImplementation "io.mockk:mockk:$mockk_version"
-    testImplementation 'org.json:json:20190722'
     testImplementation "app.cash.sqldelight:sqlite-driver:$sqldelight_version"
     testImplementation "com.goterl:lazysodium-java:5.1.4"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     // Transitive dependencies
     api 'androidx.fragment:fragment:1.5.4'
