--- a/eurotoken/build.gradle
+++ b/eurotoken/build.gradle
@@ -51,37 +51,32 @@ android {
 }
 
 dependencies {
+    api project(':common')
 
-    implementation project(':common')
-
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    // AndroidX
+    api 'androidx.constraintlayout:constraintlayout:2.0.1'
+    api 'androidx.recyclerview:recyclerview:1.1.0'
+    api 'com.github.MattSkala:recyclerview-itemadapter:0.4'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "androidx.room:room-runtime:$room_version"
-
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
-    implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
-
     // Material
-    implementation 'com.google.android.material:material:1.1.0'
+    api 'com.google.android.material:material:1.1.0'
 
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     // Logging
-    implementation 'io.github.microutils:kotlin-logging:1.7.7'
+    api 'io.github.microutils:kotlin-logging:1.7.7'
 
     // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     // Transitive dependencies
     androidTestImplementation 'androidx.test:monitor:1.6.1'
