--- a/freedomOfComputing/build.gradle
+++ b/freedomOfComputing/build.gradle
@@ -46,6 +46,8 @@ android {
 }
 
 dependencies {
+    implementation project(':common')
+
     // TODO fix direct import, this should rely on common.
     // BitTorrent
     implementation files('../common/libs/jlibtorrent-' + jlibtorrent_version + '.jar')
@@ -54,17 +56,16 @@ dependencies {
     implementation files('../common/libs/jlibtorrent-android-x86-' + jlibtorrent_version + '.jar')
     implementation files('../common/libs/jlibtorrent-android-x86_64-' + jlibtorrent_version + '.jar')
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    api 'androidx.appcompat:appcompat:1.1.0'
+    api 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    api 'com.google.android.material:material:1.1.0'
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
     testImplementation 'junit:junit:4.12'
     testImplementation "io.mockk:mockk:$mockk_version"
     testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
-
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    implementation project(':common')
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -88,7 +89,7 @@ dependencies {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions.freeCompilerArgs += [
-        "-opt-in=kotlin.RequiresOptIn"
+            "-opt-in=kotlin.RequiresOptIn"
     ]
 }
 
