--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -75,12 +75,8 @@ android {
 }
 
 dependencies {
+    implementation project(':ipv8-android')
     implementation project(':common')
-
-    api(project(':ipv8-android')) {
-        exclude group: 'net.java.dev.jna'
-        exclude group: 'org.bouncycastle'
-    }
 
     // TODO fix direct import, this should rely on common.
     // BitTorrent
@@ -91,31 +87,31 @@ dependencies {
     implementation files('../common/libs/jlibtorrent-android-x86_64-' + jlibtorrent_version + '.jar')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    api 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
 
     // BitTorrent/Libtorrent libraries
     implementation 'com.turn:ttorrent-core:1.5'
 
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.17.1'
+    api 'com.google.android.exoplayer:exoplayer-core:2.17.1'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.17.1'
 
     // Cryptocurrency integration
-    implementation 'org.bitcoinj:bitcoinj-core:0.15.10'
+    api 'org.bitcoinj:bitcoinj-core:0.15.10'
 
     // Testing
     testImplementation "io.mockk:mockk:$mockk_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
 
     // Reading MP3 metadata
-    implementation 'com.mpatric:mp3agic:0.9.1'
+    api 'com.mpatric:mp3agic:0.9.1'
 
     // Integration with activities
     implementation 'androidx.activity:activity-compose:1.3.1'
     // Compose Material Design
-    implementation "androidx.compose.material:material:1.0.1"
+    api "androidx.compose.material:material:1.0.1"
     // Animations
-    implementation "androidx.compose.animation:animation:1.0.1"
+    api "androidx.compose.animation:animation:1.0.1"
     // Tooling support (Previews, etc.)
     implementation 'androidx.compose.ui:ui-tooling:1.0.1'
     // Integration with ViewModels
@@ -128,19 +124,19 @@ dependencies {
     implementation "com.google.accompanist:accompanist-navigation-animation:0.29.1-alpha"
 
     // Room
-    implementation "androidx.room:room-runtime:$room_version"
+    api "androidx.room:room-runtime:$room_version"
     implementation("androidx.room:room-ktx:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt("androidx.room:room-compiler:$room_version")
 
     // Hilt
-    implementation("com.google.dagger:hilt-android:$hilt_ver")
-    implementation("androidx.hilt:hilt-navigation-compose:1.0.0-alpha03")
+    api "com.google.dagger:hilt-android:$hilt_ver"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
     kapt("com.google.dagger:hilt-android-compiler:$hilt_ver")
 
     // GSON
-    implementation("com.google.code.gson:gson:2.8.9")
-    implementation("org.apache.commons:commons-csv:1.9.0")
+    api "com.google.code.gson:gson:2.8.9"
+    implementation "org.apache.commons:commons-csv:1.9.0"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.9.22"
 
     // Transitive dependencies
