--- a/valuetransfer/build.gradle
+++ b/valuetransfer/build.gradle
@@ -65,20 +65,21 @@ android {
 }
 
 dependencies {
-    implementation project(':common')
+    api project(':common')
+    api project(':eurotoken')
 
     // AndroidX
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    api 'androidx.appcompat:appcompat:1.1.0'
+    api 'androidx.constraintlayout:constraintlayout:1.1.3'
+    api "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     // Material
-    implementation 'com.google.android.material:material:1.2.0'
+    api 'com.google.android.material:material:1.2.0'
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -89,10 +90,9 @@ dependencies {
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
 
-    implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
+    api 'com.github.MattSkala:recyclerview-itemadapter:0.4'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation "androidx.room:room-runtime:$room_version"
-    implementation project(path: ':eurotoken')
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
     implementation 'com.google.android.gms:play-services-location:21.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
@@ -100,10 +100,9 @@ dependencies {
     // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     // Blocking dialog and top snacbkbar
-    implementation 'com.jaredrummler:blocking-dialog:1.0.0'
+    api 'com.jaredrummler:blocking-dialog:1.0.0'
     implementation 'com.github.Redman1037:TSnackBar:V2.0.0'
 
     // Passport onboarding
@@ -114,13 +113,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.0.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     implementation 'com.github.mhshams:jnbis:1.1.0'
+    implementation 'net.sf.scuba:scuba-sc-android:0.0.20'
     implementation 'com.madgag.spongycastle:prov:1.58.0.0'
 
     // Zoom image
-    implementation 'com.jsibbold:zoomage:1.3.1'
+    api 'com.jsibbold:zoomage:1.3.1'
 
     // Side to confirm
-    implementation "com.ncorti:slidetoact:0.9.0"
+    api "com.ncorti:slidetoact:0.9.0"
 
     implementation "com.android.volley:volley:1.2.1"
 
@@ -147,10 +147,7 @@ dependencies {
     implementation 'app.cash.sqldelight:coroutines-extensions:2.0.1'
     implementation 'com.google.mlkit:vision-common:16.0.0'
     implementation 'net.sf.scuba:scuba-smartcards:0.0.18'
-    implementation(project(':ipv8-android')) {
-        exclude group: 'net.java.dev.jna'
-        exclude group: 'org.bouncycastle'
-    }
+    implementation project(':ipv8-android')
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
