--- a/currencyii/build.gradle
+++ b/currencyii/build.gradle
@@ -52,55 +52,60 @@ android {
 
 dependencies {
     implementation project(':ipv8-android')
-    implementation project(':common')
+    api project(':common')
 
     // AndroidX
+    api 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
-    implementation "androidx.preference:preference:1.1.0"
-    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     // Material
-    implementation 'com.google.android.material:material:1.1.0'
+    api 'com.google.android.material:material:1.1.0'
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'androidx.preference:preference:1.1.1'
-
-    // Logging
-    implementation 'io.github.microutils:kotlin-logging:1.7.7'
-
-    implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
 
     // Testing
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
     testImplementation "io.mockk:mockk:$mockk_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // BitcoinJ
-    implementation 'org.bitcoinj:bitcoinj-core:0.15.10'
-
-    // Google Core
-//    implementation "com.google.guava:guava:28.2-android"
+    api 'org.bitcoinj:bitcoinj-core:0.15.10'
 
     // GSON
-    implementation 'com.google.code.gson:gson:2.8.6'
+    api 'com.google.code.gson:gson:2.8.6'
 
-    // HTTP requests
-    implementation 'com.android.volley:volley:1.2.0'
+    // Transitive dependencies
+    androidTestImplementation 'androidx.test:monitor:1.6.1'
+    androidTestImplementation 'junit:junit:4.13.2'
+    api 'androidx.fragment:fragment:1.5.4'
+    api 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1'
+    api 'androidx.navigation:navigation-common:2.5.3'
+    api 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    api 'com.google.code.findbugs:jsr305:3.0.2'
+    api 'org.bouncycastle:bcprov-jdk15to18:1.68'
+    api(project(':ipv8')) {
+        exclude module: 'lazysodium-java'
+    }
+    implementation 'androidx.core:core:1.9.0'
+    implementation 'androidx.customview:customview:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-common:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-core:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.navigation:navigation-fragment:2.5.3'
+    implementation 'androidx.navigation:navigation-runtime:2.5.3'
+    implementation 'androidx.navigation:navigation-ui:2.5.3'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'com.google.guava:guava:30.0-android'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
+
 
 }
 
