--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -75,12 +75,8 @@ android {
 }
 
 dependencies {
+    implementation project(':ipv8-android')
     implementation project(':common')
-
-    api(project(':ipv8-android')) {
-        exclude group: 'net.java.dev.jna'
-        exclude group: 'org.bouncycastle'
-    }
 
     // TODO fix direct import, this should rely on common.
     // BitTorrent
@@ -91,65 +87,36 @@ dependencies {
     implementation files('../common/libs/jlibtorrent-android-x86_64-' + jlibtorrent_version + '.jar')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation "androidx.preference:preference-ktx:1.1.1"
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    api 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
-    implementation 'com.google.android:flexbox:2.0.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-runtime:1.0-M1-1.4.0-rc'
 
     // BitTorrent/Libtorrent libraries
     implementation 'com.turn:ttorrent-core:1.5'
 
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.17.1'
-    implementation 'com.google.android.exoplayer:exoplayer-dash:2.17.1'
+    api 'com.google.android.exoplayer:exoplayer-core:2.17.1'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.17.1'
-    implementation 'com.google.android.exoplayer:exoplayer-hls:2.17.1'
 
     // Cryptocurrency integration
-    implementation 'org.bitcoinj:bitcoinj-core:0.15.10'
-//    implementation 'com.google.guava:guava:29.0-android'
-    //implementation 'org.knowm.xchange:xchange-parent:5.0.1'
-    //implementation 'org.knowm.xchange:xchange-binance:5.0.1'
-
-    // Crypto library for testing
-    testImplementation "com.goterl:lazysodium-java:5.1.4"
+    api 'org.bitcoinj:bitcoinj-core:0.15.10'
 
     // Testing
-    testImplementation 'junit:junit:4.12'
     testImplementation "io.mockk:mockk:$mockk_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
-    testImplementation "org.robolectric:robolectric:3.4.2"
-
-    // Testing and generating example data
-    implementation "app.cash.sqldelight:sqlite-driver:$sqldelight_version"
 
     // Reading MP3 metadata
-    implementation 'com.mpatric:mp3agic:0.9.1'
-
-    // Logging
-    implementation 'io.github.microutils:kotlin-logging:1.7.7'
+    api 'com.mpatric:mp3agic:0.9.1'
 
     // Integration with activities
     implementation 'androidx.activity:activity-compose:1.3.1'
     // Compose Material Design
-    implementation "androidx.compose.material:material:1.0.1"
+    api "androidx.compose.material:material:1.0.1"
     // Animations
-    implementation "androidx.compose.animation:animation:1.0.1"
+    api "androidx.compose.animation:animation:1.0.1"
     // Tooling support (Previews, etc.)
     implementation 'androidx.compose.ui:ui-tooling:1.0.1'
     // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
-    // UI Tests
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.1'
-    // Compose
+
     // Runtime
     implementation "androidx.compose.runtime:runtime-livedata:1.0.1"
 
@@ -157,22 +124,65 @@ dependencies {
     implementation "com.google.accompanist:accompanist-navigation-animation:0.29.1-alpha"
 
     // Room
-    implementation "androidx.room:room-runtime:$room_version"
+    api "androidx.room:room-runtime:$room_version"
     implementation("androidx.room:room-ktx:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt("androidx.room:room-compiler:$room_version")
 
     // Hilt
-    implementation("com.google.dagger:hilt-android:$hilt_ver")
-    implementation("androidx.hilt:hilt-navigation-fragment:1.0.0-alpha03")
-    implementation("androidx.hilt:hilt-navigation-compose:1.0.0-alpha03")
+    api "com.google.dagger:hilt-android:$hilt_ver"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
     kapt("com.google.dagger:hilt-android-compiler:$hilt_ver")
 
     // GSON
-    implementation("com.google.code.gson:gson:2.8.9")
-    implementation("org.apache.commons:commons-csv:1.9.0")
+    api "com.google.code.gson:gson:2.8.9"
+    implementation "org.apache.commons:commons-csv:1.9.0"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.9.22"
 
+    // Transitive dependencies
+    api 'androidx.compose.foundation:foundation-layout:1.4.0-alpha05'
+    api 'androidx.compose.foundation:foundation:1.4.0-alpha05'
+    api 'androidx.compose.runtime:runtime:1.4.0-alpha05'
+    api 'androidx.compose.ui:ui-graphics:1.4.0-alpha05'
+    api 'androidx.compose.ui:ui:1.4.0-alpha05'
+    api 'androidx.lifecycle:lifecycle-livedata-core:2.6.0-alpha05'
+    api 'androidx.lifecycle:lifecycle-viewmodel:2.6.0-alpha05'
+    api 'androidx.navigation:navigation-common:2.5.3'
+    api 'androidx.navigation:navigation-runtime:2.5.3'
+    api 'com.google.code.findbugs:jsr305:3.0.2'
+    api 'com.google.dagger:dagger:2.50'
+    api 'com.google.dagger:hilt-core:2.50'
+    api 'javax.inject:javax.inject:1'
+    api 'org.bouncycastle:bcprov-jdk15to18:1.68'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0'
+    api(project(':ipv8')) {
+        exclude module: 'lazysodium-java'
+    }
+    implementation 'androidx.activity:activity:1.5.1'
+    implementation 'androidx.annotation:annotation:1.5.0'
+    implementation 'androidx.compose.animation:animation-core:1.4.0-alpha05'
+    implementation 'androidx.compose.material:material-icons-core:1.4.0-alpha05'
+    implementation 'androidx.compose.runtime:runtime-saveable:1.4.0-alpha05'
+    implementation 'androidx.compose.ui:ui-text:1.4.0-alpha05'
+    implementation 'androidx.compose.ui:ui-unit:1.4.0-alpha05'
+    implementation 'androidx.core:core:1.9.0'
+    implementation 'androidx.fragment:fragment:1.5.4'
+    implementation 'androidx.lifecycle:lifecycle-common:2.6.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.6.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.6.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.6.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.6.0-alpha05'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
+    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.room:room-common:2.6.1'
+    implementation 'androidx.sqlite:sqlite:2.4.0'
+    implementation 'com.google.android.exoplayer:exoplayer-common:2.17.1'
+    implementation 'com.google.android.exoplayer:exoplayer-datasource:2.17.1'
+    implementation 'com.google.guava:guava:31.0.1-android'
+    implementation 'commons-io:commons-io:2.4'
+    kapt 'com.google.dagger:dagger-compiler:2.50'
 }
 
 repositories {
