--- a/common/build.gradle
+++ b/common/build.gradle
@@ -83,9 +83,9 @@ dependencies {
     implementation 'com.google.guava:guava:30.0-android'
 
     // AndroidX
-    api 'androidx.appcompat:appcompat:1.1.0'
-    api 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.core:core-ktx:1.9.0'
+    api "androidx.appcompat:appcompat:$appcompat_version"
+    api "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation 'androidx.databinding:viewbinding:8.2.2'
@@ -94,7 +94,7 @@ dependencies {
     api 'com.journeyapps:zxing-android-embedded:4.3.0'
 
     // Material
-    api 'com.google.android.material:material:1.1.0'
+    api "com.google.android.material:material:$material_version"
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -113,29 +113,28 @@ dependencies {
     implementation files('libs/jlibtorrent-android-x86_64-' + jlibtorrent_version + '.jar')
 
     // Testing
-    testImplementation 'junit:junit:4.12'
+    testImplementation "junit:junit:$junit_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
     testImplementation "io.mockk:mockk:$mockk_version"
     testImplementation "app.cash.sqldelight:sqlite-driver:$sqldelight_version"
     testImplementation "com.goterl:lazysodium-java:5.1.4"
 
     // Transitive dependencies
-    api 'androidx.fragment:fragment:1.5.4'
-    api 'androidx.navigation:navigation-ui:2.5.3'
+    api "androidx.fragment:fragment-ktx:$fragment_version"
+    api "androidx.navigation:navigation-ui-ktx:$nav_version"
     api 'androidx.viewpager2:viewpager2:1.0.0'
     api(project(':ipv8')) {
         exclude module: 'lazysodium-java'
     }
-    implementation 'androidx.core:core:1.9.0'
     implementation 'androidx.customview:customview:1.1.0'
-    implementation 'androidx.lifecycle:lifecycle-common:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-core:2.5.1'
-    implementation 'androidx.navigation:navigation-runtime:2.5.3'
-    implementation 'androidx.sqlite:sqlite:2.4.0'
+    implementation "androidx.lifecycle:lifecycle-common:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:$lifecycle_version"
+    implementation "androidx.navigation:navigation-runtime-ktx:$nav_version"
+    implementation 'androidx.sqlite:sqlite-ktx:2.4.0'
     implementation 'app.cash.sqldelight:android-driver:2.0.1'
     implementation 'app.cash.sqldelight:coroutines-extensions:2.0.1'
     implementation 'com.google.zxing:core:3.4.1'
-    testImplementation 'io.mockk:mockk-dsl:1.13.9'
+    testImplementation "io.mockk:mockk-dsl:$mockk_version"
 }
 
 
