--- a/currencyii/build.gradle
+++ b/currencyii/build.gradle
@@ -55,14 +55,14 @@ dependencies {
     api project(':common')
 
     // AndroidX
-    api 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    api "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "androidx.core:core-ktx:$core_version"
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     // Material
-    api 'com.google.android.material:material:1.1.0'
+    api "com.google.android.material:material:$material_version"
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -73,7 +73,7 @@ dependencies {
     // Testing
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
     testImplementation "io.mockk:mockk:$mockk_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation "androidx.test.ext:junit:$android_junit_version"
 
     // BitcoinJ
     api 'org.bitcoinj:bitcoinj-core:0.15.10'
@@ -83,24 +83,23 @@ dependencies {
 
     // Transitive dependencies
     androidTestImplementation 'androidx.test:monitor:1.6.1'
-    androidTestImplementation 'junit:junit:4.13.2'
-    api 'androidx.fragment:fragment:1.5.4'
-    api 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1'
-    api 'androidx.navigation:navigation-common:2.5.3'
     api 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    androidTestImplementation "junit:junit:$junit_version"
+    api "androidx.fragment:fragment-ktx:$fragment_version"
+    api "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    api "androidx.navigation:navigation-common:$nav_version"
     api 'com.google.code.findbugs:jsr305:3.0.2'
     api 'org.bouncycastle:bcprov-jdk15to18:1.68'
     api(project(':ipv8')) {
         exclude module: 'lazysodium-java'
     }
-    implementation 'androidx.core:core:1.9.0'
     implementation 'androidx.customview:customview:1.1.0'
-    implementation 'androidx.lifecycle:lifecycle-common:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-core:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.navigation:navigation-fragment:2.5.3'
-    implementation 'androidx.navigation:navigation-runtime:2.5.3'
-    implementation 'androidx.navigation:navigation-ui:2.5.3'
+    implementation "androidx.lifecycle:lifecycle-common:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-runtime-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.google.guava:guava:30.0-android'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
