--- a/musicdao/build.gradle
+++ b/musicdao/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.jlleitschuh.gradle.ktlint'
 apply plugin: 'androidx.navigation.safeargs'
+apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'kotlin-kapt'
-apply plugin: "dagger.hilt.android.plugin"
 
 buildscript {
     repositories {
@@ -14,10 +14,6 @@ buildscript {
     dependencies {
         classpath("com.google.dagger:hilt-android-gradle-plugin:$hilt_ver")
     }
-}
-
-configurations.all {
-    resolutionStrategy { force 'androidx.core:core-ktx:1.7.0-alpha01' }
 }
 
 android {
@@ -87,8 +83,8 @@ dependencies {
     implementation files('../common/libs/jlibtorrent-android-x86_64-' + jlibtorrent_version + '.jar')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    api "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "com.google.android.material:material:$material_version"
 
     // BitTorrent/Libtorrent libraries
     implementation 'com.turn:ttorrent-core:1.5'
@@ -115,7 +111,7 @@ dependencies {
     // Tooling support (Previews, etc.)
     implementation 'androidx.compose.ui:ui-tooling:1.0.1'
     // Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
 
     // Runtime
     implementation "androidx.compose.runtime:runtime-livedata:1.0.1"
@@ -145,13 +141,13 @@ dependencies {
     api 'androidx.compose.runtime:runtime:1.4.0-alpha05'
     api 'androidx.compose.ui:ui-graphics:1.4.0-alpha05'
     api 'androidx.compose.ui:ui:1.4.0-alpha05'
-    api 'androidx.lifecycle:lifecycle-livedata-core:2.6.0-alpha05'
-    api 'androidx.lifecycle:lifecycle-viewmodel:2.6.0-alpha05'
-    api 'androidx.navigation:navigation-common:2.5.3'
-    api 'androidx.navigation:navigation-runtime:2.5.3'
+    api "androidx.lifecycle:lifecycle-livedata-core:$lifecycle_version"
+    api "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    api "androidx.navigation:navigation-common:$nav_version"
+    api "androidx.navigation:navigation-runtime:$nav_version"
     api 'com.google.code.findbugs:jsr305:3.0.2'
-    api 'com.google.dagger:dagger:2.50'
-    api 'com.google.dagger:hilt-core:2.50'
+    api "com.google.dagger:dagger:$hilt_ver"
+    api "com.google.dagger:hilt-core:$hilt_ver"
     api 'javax.inject:javax.inject:1'
     api 'org.bouncycastle:bcprov-jdk15to18:1.68'
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0'
@@ -165,16 +161,16 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-saveable:1.4.0-alpha05'
     implementation 'androidx.compose.ui:ui-text:1.4.0-alpha05'
     implementation 'androidx.compose.ui:ui-unit:1.4.0-alpha05'
-    implementation 'androidx.core:core:1.9.0'
-    implementation 'androidx.fragment:fragment:1.5.4'
-    implementation 'androidx.lifecycle:lifecycle-common:2.6.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.6.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-livedata:2.6.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-runtime:2.6.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.6.0-alpha05'
-    implementation 'androidx.navigation:navigation-compose:2.5.3'
+    implementation "androidx.core:core:$core_version"
+    implementation "androidx.fragment:fragment:$fragment_version"
+    implementation "androidx.lifecycle:lifecycle-common:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.room:room-common:2.6.1'
     implementation 'androidx.sqlite:sqlite:2.4.0'
@@ -182,7 +178,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-datasource:2.17.1'
     implementation 'com.google.guava:guava:31.0.1-android'
     implementation 'commons-io:commons-io:2.4'
-    kapt 'com.google.dagger:dagger-compiler:2.50'
+    kapt "com.google.dagger:dagger-compiler:$hilt_ver"
 }
 
 repositories {
