--- a/valuetransfer/build.gradle
+++ b/valuetransfer/build.gradle
@@ -69,17 +69,17 @@ dependencies {
     api project(':eurotoken')
 
     // AndroidX
-    api 'androidx.appcompat:appcompat:1.1.0'
-    api 'androidx.constraintlayout:constraintlayout:1.1.3'
-    api "androidx.recyclerview:recyclerview:1.1.0"
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    api "androidx.appcompat:appcompat:$appcompat_version"
+    api "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    api "androidx.recyclerview:recyclerview:$recyclerview_version"
+    implementation "androidx.core:core-ktx:$core_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     // Material
-    api 'com.google.android.material:material:1.2.0'
+    api "com.google.android.material:material:$material_version"
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -90,7 +90,7 @@ dependencies {
     // Logging
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
 
-    api 'com.github.MattSkala:recyclerview-itemadapter:0.4'
+    api "com.github.MattSkala:recyclerview-itemadapter:$recyclerview_adapter_version"
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation "androidx.room:room-runtime:$room_version"
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
@@ -98,8 +98,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     // Testing
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$android_junit_version"
 
     // Blocking dialog and top snacbkbar
     api 'com.jaredrummler:blocking-dialog:1.0.0'
@@ -127,22 +127,19 @@ dependencies {
     // Transitive dependencies
     androidTestImplementation 'androidx.test:monitor:1.6.1'
     api 'androidx.cardview:cardview:1.0.0'
-    api 'androidx.core:core:1.9.0'
-    api 'androidx.fragment:fragment:1.5.4'
-    api 'androidx.lifecycle:lifecycle-livedata-core:2.5.1'
+    api "androidx.fragment:fragment-ktx:$fragment_version"
+    api "androidx.lifecycle:lifecycle-livedata-core-ktx:$lifecycle_version"
     api 'androidx.viewpager:viewpager:1.0.0'
     api 'com.google.mlkit:common:16.0.0'
     api(project(':ipv8')) {
         exclude module: 'lazysodium-java'
     }
-    implementation 'androidx.documentfile:documentfile:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-common:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-process:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
-    implementation 'androidx.sqlite:sqlite:2.4.0'
+    implementation 'androidx.documentfile:documentfile:1.0.1'
+    implementation "androidx.lifecycle:lifecycle-common:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-process:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    implementation 'androidx.sqlite:sqlite-ktx:2.4.0'
     implementation 'app.cash.sqldelight:android-driver:2.0.1'
     implementation 'app.cash.sqldelight:coroutines-extensions:2.0.1'
     implementation 'com.google.mlkit:vision-common:16.0.0'
